# calc_seduc

./: connection.py  controller.py  db.sqlite  main.py  models.py  processors.py  pyproject.toml  setup.cfg  timetable.py  utils.py
calc_seduc/: calendar.py  controller.py  factories.py  main.py  models.py  processors.py  protocols.py
calc_seduc/models/: __init__.py  contract.py  earning.py  payment.py  payment_table.py  school.py
tests/: conftest.py  test_calendar.py  test_controller.py  test_models.py  test_processors.py
